@@ -7,6 +7,5 @@ locale	foxreplace	pl-PL	locale/pl-PL/
 locale	foxreplace	pt-BR	locale/pt-BR/
 locale	foxreplace	ru-RU	locale/ru-RU/
 skin	foxreplace	classic/1.0	skin/default/
-skin	foxreplace	macfoxIIgraphite	skin/macfoxIIgraphite/
 overlay	chrome://browser/content/browser.xul	chrome://foxreplace/content/foxreplace.xul
 style	chrome://global/content/customizeToolbar.xul	chrome://foxreplace/skin/foxreplace.css
