@@ -1,61 +1,0 @@
-.inputTextBoxSelector {
-  -moz-appearance: none;
-  width: 20px;
-  height: 20px;
-  /*margin: 0px;*/
-  margin: 2px 0px 2px 0px;
-  -moz-margin-end: -1px;
-  /*padding: 0px;*/             /* extern */
-  /*padding: 2px 0px 2px 0px;*/ /* intern */
-  border: #96969D 1px solid;
-}
-
-.inputTextBoxSelectorImage {
-  height: 16px;
-  width: 16px;
-  list-style-image: url("chrome://foxreplace/skin/inputtextbox-icons.png");
-  -moz-margin-start: 4px;
-  margin: 0px;
-}
-
-.inputTextBoxSelectorDropmarker {
-  list-style-image: url("chrome://global/skin/arrow/arrow-dn.gif");
-  -moz-margin-start: 3px;
-  margin: 0px;
-}
-
-.inputTextBoxSelectorMenuItem {
-  list-style-image: url("chrome://foxreplace/skin/inputtextbox-icons.png");
-}
-
-.inputTextBoxSelectorImage[regexp="false"], .inputTextBoxSelectorMenuItem[anonid="itemText"] {
-  -moz-image-region: rect(0px, 16px, 16px, 0px);
-}
-
-.inputTextBoxSelectorImage[regexp="true"], .inputTextBoxSelectorMenuItem[anonid="itemRegExp"] {
-  -moz-image-region: rect(0px, 32px, 16px, 16px);
-}
-
-.inputTextBox {
-  /*min-height: 22px;*/
-  /*width: 4em;*/
-  /*min-width: 4em;*/
-  margin-right: 0px;
-  margin-left: 0px;
-  /*background-color: -moz-field;*/
-
-  /*-moz-appearance: none;
-  -moz-border-top-colors: #96969D;
-  -moz-border-bottom-colors: #96969D;
-  -moz-border-right-colors: #96969D;
-  -moz-border-left-colors: #96969D;
-  border-width: 1px;*/
-}
-
-.inputTextBox[regexp="false"] {
-  background-color: white;
-}
-
-.inputTextBox[regexp="true"] {
-  background-color: yellow;
-}
