@@ -1,13 +1,0 @@
-/* override Noia fixed width/height */
-#foxreplacePreferences {
-  height: auto !important;
-  width: auto !important;
-}
-
-textbox {
-  width: 20em;
-}
-
-#inputStringTextBox {
-  -moz-binding: url("chrome://foxreplace/content/bindings.xml#inputTextBox");
-}
